--- a/Joje.cabal
+++ b/Joje.cabal
@@ -16,6 +16,7 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 executable Joje
+  ghc-options:	       -Wall
   main-is:             Main.hs
   -- other-modules:       
   other-extensions:    OverloadedStrings
@@ -23,5 +24,5 @@ executable Joje
                        scotty,
                        text,
                        blaze-html  
-  -- hs-source-dirs:      
+  hs-source-dirs:      src/main
   default-language:    Haskell2010
