--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: haskell
 install:
- - "cabal install --only-dependencies"
+ - cabal install --only-dependencies
+script:
+ - cabal configure --ghc-options=-Werror && cabal build
 notifications:
   email: true
