--- a/Joje.cabal
+++ b/Joje.cabal
@@ -2,7 +2,7 @@
 -- see http://haskell.org/cabal/users-guide/
 
 name:                Joje
-version:             0.1.0.0
+version:             0.0.1
 -- synopsis:            
 -- description:         
 license:             Apache-2.0
@@ -20,9 +20,9 @@ executable Joje
   main-is:             Main.hs
   -- other-modules:       
   other-extensions:    OverloadedStrings
-  build-depends:       base >=4.3.1 && <4.9,
-                       scotty,
-                       text,
-                       blaze-html  
+  build-depends:       base      >= 4.3.1 && <5,
+                       wai       >= 3.0.0 && < 3.3,
+                       wai-extra >= 3.0.0 && < 3.1,
+                       warp      >= 3.0.0 && < 3.3
   hs-source-dirs:      src/main
   default-language:    Haskell2010
