--- a/Joje.cabal
+++ b/Joje.cabal
@@ -23,6 +23,7 @@ executable Joje
   build-depends:       base      >= 4.3.1 && <5,
                        wai       >= 3.0.0 && < 3.3,
                        wai-extra >= 3.0.0 && < 3.1,
-                       warp      >= 3.0.0 && < 3.3
+                       warp      >= 3.0.0 && < 3.3,
+                       http-types
   hs-source-dirs:      src/main
   default-language:    Haskell2010
