--- a/Joje.cabal
+++ b/Joje.cabal
@@ -24,6 +24,7 @@ executable Joje
                        wai       >= 3.0.0 && < 3.3,
                        wai-extra >= 3.0.0 && < 3.1,
                        warp      >= 3.0.0 && < 3.3,
-                       http-types
+                       http-types,
+                       bytestring
   hs-source-dirs:      src/main
   default-language:    Haskell2010
