Added Werror build flag
Added -Werror to ghc flags. This will fail the current builds!

--- a/Joje.cabal
+++ b/Joje.cabal
@@ -16,7 +16,7 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 executable Joje
-  ghc-options:	       -Wall
+  ghc-options:	       -Wall -Werror
   main-is:             Main.hs
   -- other-modules:       
   other-extensions:    OverloadedStrings
