--- a/Joje.cabal
+++ b/Joje.cabal
@@ -25,6 +25,8 @@ executable Joje
                        wai-extra >= 3.0.0 && < 3.1,
                        warp      >= 3.0.0 && < 3.3,
                        http-types,
-                       bytestring
+                       bytestring,
+                       parsec,
+                       aeson
   hs-source-dirs:      src/main
   default-language:    Haskell2010
