Further work on Router, still no handling of ids

--- a/Joje.cabal
+++ b/Joje.cabal
@@ -20,6 +20,7 @@ Library
                        Web.Joje.Router
   other-modules:       Web.Joje.DefaultHandlers
                        Web.Joje.Router.Data
+                       Web.Joje.Router.RouteConstructs
   ghc-options:	       -Wall -Werror
   other-extensions:    OverloadedStrings
   build-depends:       base      >= 4.3.1 && <5,
