--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,23 @@
-language: haskell
-install:
- - cabal install --only-dependencies
- - sudo apt-get -q -y install hlint || cabal install hlint
+sudo: false
+
+# Caching so the next build will be fast too.
+cache:
+  directories:
+  - $HOME/.stack
+
+before_install:
+# Download and unpack the stack executable
+- mkdir -p ~/.local/bin
+- export PATH=$HOME/.local/bin:$PATH
+- travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
+- stack config set system-ghc --global true
+- export PATH=/opt/ghc/7.10.2/bin:$PATH
+
+addons:
+  apt:
+    sources:
+    - hvr-ghc
+    packages:
+    - ghc-7.10.2
 script:
- - hlint src
- - cabal configure && cabal build
-notifications:
-  email: true
-sudo: required
+  - stack --no-terminal --skip-ghc-check test
