--- a/Joje.cabal
+++ b/Joje.cabal
@@ -33,6 +33,7 @@ Library
                        bytestring,
                        aeson,
                        containers,
-                       bytestring-trie
+                       bytestring-trie,
+                       regex-compat
   hs-source-dirs:      src/main
   default-language:    Haskell2010
