--- a/Joje.cabal
+++ b/Joje.cabal
@@ -33,7 +33,6 @@ Library
                        bytestring,
                        aeson,
                        containers,
-                       bytestring-trie,
-                       regex-compat
+                       bytestring-trie
   hs-source-dirs:      src/main
   default-language:    Haskell2010
