--- a/Joje.cabal
+++ b/Joje.cabal
@@ -1,4 +1,4 @@
-name:                Joje
+name:                joje
 version:             0.0.0
 -- synopsis:
 -- description:
@@ -17,6 +17,7 @@ extra-source-files:
 
 Library
   exposed-modules:     Web.Joje
+                       Web.Joje.Internal
   other-modules:       Web.Joje.Router
                        Web.Joje.DefaultHandlers
                        Web.Joje.Router.Data
@@ -36,3 +37,20 @@ Library
                        bytestring-trie
   hs-source-dirs:      src/main
   default-language:    Haskell2010
+
+test-suite spec
+  type: exitcode-stdio-1.0
+  main-is: Spec.hs
+  hs-source-dirs: src/test
+  ghc-options: -Wall
+  build-depends:
+    base  >=4.3.1 && <5,
+    wai       >= 3.0.0 && < 3.3,
+    wai-extra >= 3.0.0 && < 3.1,
+    hspec >= 2.0.0 && < 3,
+    bytestring,
+    http-types,
+    joje
+  other-modules:
+    Web.JojeSpec
+  default-language: Haskell2010
